# fubox-API

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  FEATURE_PLAN.md  Makefile  PROJECT_PROGRESS_REPORT.md  README.md  TEST_AND_ACCEPTANCE.md  TODO.md
.github/workflows/: ci.yml
TODO/: CODE_FIRST_DESIGN_TODO_2026-06-12.md  README.md
TODO/archive/: NEW_API_MVP_PRIORITY_2026-06-07.md  OPEN_SOURCE_ALPHA_PRIORITY_2026-06-06.md
apps/control-plane/: Cargo.toml
apps/control-plane/src/: admin.rs  alerts.rs  auth.rs  auth_login_rate_limit.rs  auth_repo.rs  main.rs  prompt_eval_shadow.rs  rbac.rs  user_auth.rs
apps/gateway/: Cargo.toml
apps/gateway/src/: db.rs  errors.rs  main.rs  streaming.rs  tpm_estimate.rs
apps/worker/: Cargo.toml
apps/worker/src/: alert_webhook.rs  billing_reconciliation.rs  clickhouse_log_store.rs  main.rs  prompt_eval_shadow.rs
crates/adapters/: Cargo.toml
crates/app-core/: Cargo.toml
crates/auth/: Cargo.toml
crates/auth/src/: keys.rs  lib.rs  login_rate_limit.rs  passwords.rs  provider_keys.rs  rbac.rs  sessions.rs
crates/billing-ledger/: Cargo.toml
crates/billing-ledger/src/: beta_mode.rs  exact_cache.rs  ledger.rs  lib.rs  paid_evidence_bundle.rs  payment_demo.rs  payment_provider.rs  postgres_execution.rs  pre_authorize.rs  rating.rs  reconciliation.rs  subscription_scheduler.rs  writer_contract.rs
crates/billing-ledger/tests/: admin_adjustment_contract.rs  consistent_writer_contract_fixture.rs  consistent_writer_executor_fixture.rs  consistent_writer_postgres_execution_fixture.rs  consistent_writer_postgres_executor_fixture.rs  consistent_writer_postgres_sqlx_adapter_fixture.rs  credit_grant_crud_contract.rs  credit_wallet_productization_contract.rs  exact_cache_billing_fixture.rs  ledger_contract_fixture.rs  opening_balance_import_contract.rs  payment_order_invoice_contract.rs  recharge_voucher_contract.rs  subscription_package_lifecycle_contract.rs  usage_rating_runtime_extraction_fixture.rs  user_remaining_balance_contract.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  models.rs  pool.rs  rate_limit_reservation.rs  repository.rs  trace_affinity.rs
crates/observability/: Cargo.toml
crates/routing/: Cargo.toml
crates/shared/: Cargo.toml
crates/stream/: Cargo.toml
db/: README.md
db/dev-seeds/: 0001_dev_admin_seed.sql  0002_dev_gateway_seed.sql  0003_dev_smoke_seed_reconcile.sql
db/migrations/: 0001_init.sql  0002_upgrade_dev_skeleton.sql  0003_dev_seed.sql  0004_dev_smoke_seed_reconcile.sql  0005_e1_e2_e3_e10_integrity_hardening.sql  0006_gateway_hot_path_indexes.sql  0007_pricing_policy_selection.sql  0008_dev_admin_seed.sql  0009_api_key_profile_ip_allowlist.sql  0010_billing_ledger_cutover_state.sql  0011_opening_balance_imports.sql  0012_recharge_voucher_boundary.sql  0013_payment_order_invoice_boundary.sql  0014_subscription_package_lifecycle_boundary.sql  0015_virtual_key_concurrency_limit.sql  0016_importer_apply_journal.sql  0017_enterprise_identity_session_idempotency.sql  0018_enterprise_sales_activity.sql  0018_payment_provider_merchant_credentials.sql  0019_enterprise_external_crm_adapters.sql  0020_enterprise_crm_sync_runs.sql  0021_subscription_scheduler_worker_supervisors.sql  0022_payment_provider_credential_rotation_executor.sql  0023_native_anthropic_channel_protocols.sql
deploy/docker-compose/: Dockerfile  admin-ui.Dockerfile  docker-compose.clickhouse.local.yml  docker-compose.yml  mock-provider.Dockerfile  postgres-init.sh
deploy/helm/: Chart.yaml  (+5 more)
docs/: 00_EXECUTIVE_BRIEF.md  01_ARCHITECTURE_PLAN.md  02_FEATURE_PLAN.md  03_MODULE_SPECS.md  04_DATA_MODEL.md  05_API_AND_PROTOCOL_SPEC.md  06_ROUTING_STREAMING_SPEC.md  07_BILLING_LEDGER_SPEC.md  08_OBSERVABILITY_SPEC.md  09_SECURITY_COMPLIANCE.md  10_TEST_ACCEPTANCE_PLAN.md  11_DEPLOYMENT_OPS_RUNBOOK.md  12_DEVELOPMENT_PROCESS.md  13_MIGRATION_PLAN.md  14_RISKS_AND_ADR.md  15_REQUIREMENTS_TRACEABILITY.md  16_COMPETITOR_LEARNINGS.md  17_RUST_IMPLEMENTATION_BASELINE.md  E11-007_LEDGER_EXECUTE_OPENAPI_VALIDATION_RUNBOOK.md  E13-005_PROMPT_PROTECTION_POSTGRES_PROOF_RUNBOOK.md  E3_PROVIDER_KEY_AUDIT_READBACK_RUNBOOK.md  E8-004_GATEWAY_TPM_RUNTIME_WIRING.md  E8-004_PRODUCTION_BACKEND_EVIDENCE_RUNBOOK.md  OPEN_SOURCE_ALPHA_CLEAN_CLONE_TRANSCRIPT_TEMPLATE.md  P0_BETA_STATUS.md  PAID_BETA_EVIDENCE_INDEX.md  PAID_BETA_RUNBOOK.md  PROJECT_FOCUS.md  TODO.md  TODO_IMPLEMENTATION_ROADMAP_2026-06-11.md  TODO_IMPLEMENTATION_ROADMAP_2026-06-12.md  backup_restore.md
examples/: ci_github_actions_example.yml  config.example.yaml  docker-compose.example.yml  env.example  k6_load_test_skeleton.js  openapi_admin_skeleton.yaml  route_policy.example.yaml  sql_schema_draft.sql
project/: ACCEPTANCE_CHECKLIST.md  PROJECT_BOARD.csv  QA_TEST_CASES.csv  RELEASE_CHECKLIST.md  paid_beta_evidence_index.json
references/: SOURCE_LINKS.md
scripts/: adapter_conformance.ps1  alpha_smoke.ps1  apply_migrations_postgres.ps1  backup_datastores.ps1  bootstrap_new_api_mock_distribution.ps1  build.ps1  common.ps1  compose_billing_paid_evidence_bundle.ps1  compose_down.ps1  compose_up.ps1  dev.ps1  dev_login_check.ps1  dev_up.ps1  docker_build.ps1  fmt.ps1  generate_supply_chain_artifacts.ps1  lint.ps1  plan_staging_smoke_security.ps1  prepare_trusted_user_api_distribution_packet.ps1  release_check.ps1  restore_datastores.ps1  run_gateway_tpm_production_backend_evidence.ps1  scan_secrets.ps1  scan_supply_chain.ps1  setup_local_mvp.ps1  smoke.ps1  test.ps1  test_adapter_conformance_ci_contract.ps1  test_supply_chain_artifacts.ps1  test_supply_chain_scan.ps1  verify_billing_beta_mode_readiness.ps1  verify_billing_ledger_sqlx_live_smoke.ps1  verify_billing_paid_evidence_bundle.ps1  verify_compose_smoke.ps1  verify_control_plane_auth_smoke.ps1  verify_control_plane_billing_ledger_runtime_writer_readiness.ps1  verify_control_plane_crud_smoke.ps1  verify_control_plane_ledger_adjustment_execute_smoke.ps1  verify_control_plane_ledger_adjustment_openapi_contract.ps1  verify_control_plane_ledger_adjustment_openapi_semantic.ps1  (+53 more)
(+402 files in other folders)
