[workspace]
resolver = "2"
members = [
  "apps/gateway",
  "apps/control-plane",
  "apps/worker",
  "crates/adapters",
  "crates/app-core",
  "crates/auth",
  "crates/billing-ledger",
  "crates/config",
  "crates/db",
  "crates/observability",
  "crates/routing",
  "crates/shared",
  "crates/stream",
]

[workspace.package]
version = "0.1.0-alpha"
edition = "2024"
license = "Proprietary"
authors = ["AI Gateway Team"]

[workspace.dependencies]
ai-gateway-adapters = { path = "crates/adapters" }
ai-gateway-app-core = { path = "crates/app-core" }
ai-gateway-auth = { path = "crates/auth" }
ai-gateway-billing-ledger = { path = "crates/billing-ledger" }
ai-gateway-config = { path = "crates/config" }
ai-gateway-db = { path = "crates/db" }
ai-gateway-observability = { path = "crates/observability" }
ai-gateway-routing = { path = "crates/routing" }
ai-gateway-shared = { path = "crates/shared" }
ai-gateway-stream = { path = "crates/stream" }
aes-gcm = "0.10"
axum = "0.8"
bytes = "1"
futures = "0.3"
hmac = "0.12"
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
hex = "0.4"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "json"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
