[package]
name = "ai-control-plane"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ai-gateway-app-core.workspace = true
ai-gateway-auth.workspace = true
ai-gateway-config.workspace = true
ai-gateway-db.workspace = true
ai-gateway-observability.workspace = true
ai-gateway-routing.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
