[package]
name = "ai-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ai-gateway-adapters.workspace = true
ai-gateway-app-core.workspace = true
ai-gateway-auth.workspace = true
ai-gateway-billing-ledger.workspace = true
ai-gateway-config.workspace = true
ai-gateway-observability.workspace = true
ai-gateway-routing.workspace = true
ai-gateway-stream.workspace = true
axum.workspace = true
futures.workspace = true
hex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
