[package]
name = "ai-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ai-gateway-billing-ledger.workspace = true
ai-gateway-config.workspace = true
ai-gateway-db.workspace = true
ai-gateway-observability.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
