[package]
name = "ai-gateway-billing-ledger"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
postgres-sqlx = ["dep:sqlx"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, optional = true }
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
