[package]
name = "ai-gateway-billing-ledger"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
postgres-sqlx = ["dep:sqlx"]

[[bin]]
name = "billing-ledger-runtime-writer-commit"
path = "src/bin/runtime_writer_commit.rs"
required-features = ["postgres-sqlx"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
sha2.workspace = true
reqwest.workspace = true
sqlx = { workspace = true, optional = true }
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
